<resources>
    <string name="app_name">Wasthi Restaurant</string>
    <string name="company_name">\@ Soft Unix Technology</string>
    <string name="side_nav_home_title">Home</string>
    <string name="side_nav_profile_title">Profile</string>
    <string name="side_nav_orders_title">Orders</string>
    <string name="side_nav_wishlist_title">Wishlist</string>
    <string name="side_nav_cart_title">Cart</string>
    <string name="side_nav_message_title">Message</string>
    <string name="side_nav_setting_title">Setting</string>
    <string name="side_nav_login_title">Login</string>
    <string name="side_nav_logout_title">Logout</string>
    <string name="bottom_nav_home_title">Home</string>
    <string name="bottom_nav_orders_title">Orders</string>
    <string name="bottom_nav_cart_title">Cart</string>
    <string name="bottom_nav_profile_title">Account</string>
    <string name="drawer_oprn">Open</string>
    <string name="drawer_close">Close</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="bottom_nav_qr_title">QR Scan</string>
    <string name="newest_dishes_title">Try Our Newest Dishes!</string>
    <string name="no_products_available">No products available</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="bottom_nav_product_search">Search</string>
</resources>