<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:id="@+id/side_nav_group_main"
        android:checkableBehavior="single">
        <item android:id="@+id/side_nav_home"
            android:icon="@drawable/home"
            android:iconTint="@color/md_theme_primary"
            android:title="@string/side_nav_home_title"
            android:checkable="true"/>
        <item android:id="@+id/side_nav_profile"
            android:icon="@drawable/profile"
            android:visible="false"
            android:title="@string/side_nav_profile_title"
            android:checkable="true"/>
        <item android:id="@+id/side_nav_orders"
            android:icon="@drawable/orders"
            android:visible="false"
            android:title="@string/side_nav_orders_title"
            android:checkable="true"/>
        <item android:id="@+id/side_nav_wishlist"
            android:icon="@drawable/wishlist" android:title="@string/side_nav_wishlist_title" android:checkable="true"  android:visible="false"/>
        <item android:id="@+id/side_nav_cart" android:icon="@drawable/cart" android:title="@string/side_nav_cart_title" android:checkable="true" android:visible="false"/>
        <item android:id="@+id/side_nav_chat" android:title="@string/side_nav_message_title" android:icon="@drawable/chat" android:checkable="true" android:visible="false"/>
        <item android:id="@+id/side_nav_setting" android:title="@string/side_nav_setting_title" android:icon="@drawable/settings" android:checkable="true" android:visible="false"/>
    </group>

    <group android:id="@+id/side_nav_group_auth" >
        <item android:id="@+id/side_nav_login" android:title="@string/side_nav_login_title" android:icon="@drawable/login"/>
        <item android:id="@+id/side_nav_logout" android:title="@string/side_nav_logout_title" android:visible="false" android:icon="@drawable/logout" />
    </group>

</menu>