<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/bottom_nav_home"
        android:icon="@drawable/home"
        android:title="@string/bottom_nav_home_title" />
    <item
        android:id="@+id/bottom_nav_search"
        android:icon="@drawable/search_product"
        android:title="@string/bottom_nav_product_search" />
    <!--    <item android:id="@+id/bottom_nav_qr" android:icon="@drawable/qr_btn"-->
    <!--        android:title="@string/bottom_nav_qr_title" />-->
    <item
        android:id="@+id/nav_placeholder"
        android:title="" />
    <item
        android:id="@+id/bottom_nav_cart"
        android:icon="@drawable/cart"
        android:title="@string/bottom_nav_cart_title" />
    <item
        android:id="@+id/bottom_nav_profile"
        android:icon="@drawable/profile"
        android:title="@string/bottom_nav_profile_title" />
</menu>